--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	<div class="fullscreen" id="bio">
 		<div class="bio-header">Hi, I'm Andrew</div>
 		<div class="bio-body">
-			<p>I'm a student at Johnson & Wales University in Providence, Rhode Island studying Advertising and Marketing Communications. As far as advertising goes, I'm a creative that dabbles a bit in everything, trying to find my way in the world.</p>
+			<p>I'm a student at Johnson & Wales University in Providence, Rhode Island studying Advertising and Marketing Communications. I focus on branding and creative advertising, utilizing graphic design, animation, and web design to create fully integrated campaigns that actually mean something.</p>
 			<p>I currently work at Pangea.app, a Providence-based startup building a marketplace for college students to freelance both within their institutions and with the general public. I am also the co-events chair for JWU's AD Club, and head desiginer on the award-winning AD Team.</p>
 		</div>
 		<div class="sidebar">
