--- a/card.html
+++ b/card.html
@@ -147,6 +147,7 @@
 	</style>
 	
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Andrew Thompson</title>
 	
 	<script>
