--- a/card.html
+++ b/card.html
@@ -119,6 +119,10 @@
 			left: 0;
 		}
 		
+		#resume_text a { 
+			color: inherit;
+		}
+		
 		#flip_button {
 			position: absolute;
 			width: 50%;
