--- a/card.html
+++ b/card.html
@@ -112,7 +112,7 @@
 			font-family: "CooperHewitt-Semibold";
 			font-size: 36px;
 			text-align: center;
-			top: 10%;
+			top: 12.5%;
 			position: absolute;
 			width: 50%;
 			height: auto;
@@ -120,7 +120,7 @@
 		}
 		
 		#resume_text a { 
-			color: inherit;
+			color: #ffaeae;
 		}
 		
 		#flip_button {
@@ -134,7 +134,7 @@
 			font-family: "CooperHewitt-Semibold";
 			font-size: 36px;
 			text-align: center;
-			top: 10%;
+			top: 12.5%;
 			position: absolute;
 			width: 100%;
 			height: 100%;
