--- a/card.html
+++ b/card.html
@@ -185,8 +185,8 @@
 		
 	<div class="front"> <div class="text_container">
 		<p>Andrew Thompson</p>
-		<p>Advertising & Marketing Communications Major @ <a href="www.jwu.edu">JWU</a></p>
-		<p>Marketing Strategist & Designer @ <a href="http://www.pangea.app">Pangea.app</a></p>
+		<p>Advertising & Marketing Communications Major @ <a href="http://www.jwu.edu">JWU</a></p>
+		<p>Marketing Strategist & Designer @ <a href="http://www.pangea.app/install">Pangea.app</a></p>
 		<p><a href="email:andrew@pangea.app">andrew@pangea.app</a></p>
 		<p><a href="http://www.andrewthompson.me">andrewthompson.me</a></p>
 		<p>(860).994.2748</p>
