--- a/card.html
+++ b/card.html
@@ -124,9 +124,10 @@
 			text-align: center;
 			top: 12.5%;
 			position: absolute;
-			width: 50%;
+			width: 100%;
 			height: auto;
 			left: 0;
+			color: #ffaeae;
 		}
 		
 		#resume_text a { 
