--- a/photos.html
+++ b/photos.html
@@ -17,6 +17,8 @@
 
 
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
 	<title>Photography</title>
 <!--		<link href="portfolio.css" rel="stylesheet" type="text/css">-->
 	<!--	<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
