--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,8 @@
 
 
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
 	<title>Projects</title>
 	<!--		<link href="portfolio.css" rel="stylesheet" type="text/css">-->
 	<!--		<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
