--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 	</script>
 
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">	<title>Andrew Thompson</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	<title>Andrew Thompson</title>
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<!--	<link href="main.css" rel="stylesheet" type="text/css">-->
