--- a/card.html
+++ b/card.html
@@ -189,9 +189,9 @@
 		<p>Andrew Thompson</p>
 		<p>Advertising & Marketing Communications Major @ <a href="http://www.jwu.edu">JWU</a></p>
 		<p>Marketing Strategist & Designer @ <a href="http://www.pangea.app/install">Pangea.app</a></p>
-		<p><a href="email:andrew@pangea.app">andrew@pangea.app</a></p>
+		<p><a href="mailto:andrew@pangea.app">andrew@pangea.app</a></p>
 		<p><a href="http://www.andrewthompson.me">andrewthompson.me</a></p>
-		<p>(860).994.2748</p>
+		<p><a href="tel:8609942748">(860).994.2748</a></p>
 	</div> </div>
 		
 	<div class="back">
