--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<div class="fullscreen" id="contact">
 		<div class="contact-header">Get in touch</div>
 		<div class="contact-body">
-			<p><a href="mailto:athompson06@wildcats.jwu.edu" alt="Email">Email</a></p>
+			<p><a href="mailto:andrew@pangea.app" alt="Email">Email</a></p>
 			<p><a href="https://www.linkedin.com/in/andrew-l-thompson" alt="linkedin">Linkedin</a></p>
 			<p><a href="https://www.behance.net/andrew-l-thompson" alt="Behance">Behance</a></p>
 			<p><a href="https://www.instagram.com/andrew_thhompson/" alt="Behance">Instagram</a></p>
