--- a/projects.html
+++ b/projects.html
@@ -90,6 +90,83 @@
 	</script>
 	
 	<div class="content">
+		<div class="content-title">UNICEF</div>
+		
+		<div class="txt">
+			<p>As a project for a creative concepts class, my group was tasked with creating new ways to market some of the best inventions of 2017, as decided by CNN. Our product, the UNICEF Kid Power Band, is a children's pedometer and app that helps combat two of the greatest issues facing children abroad: obesity and malnoursihment. As each kid in the US logs their steps, kids around the world from impoverished areas are sent care packages.</p>
+			<p>Since UNICEF forbids advertising specifically to children in their brand guidelines, we decided to target their biggest fans: their moms. By appealing to their want to see their child grow and make a difference, we framed the product as a tool that would help them help change the world even before their 4th grade graduation. </p>
+			<p>My role: Art direction</p>
+			<p>Team members: Erin Weiland, Lindsay Saiia, Manal Jakhar, & Taylor Haughton</p>
+		</div>
+		
+		<div class="img" style="top: 22.5%;">
+			<img class="content-image" src="images/UNICEF_2.png">
+			<img class="content-image" src="images/UNICEF_4.png">
+			<a href="https://www.behance.net/gallery/65409211/Move-Out-Donate">
+				<div class="behance-link behance-link-left">
+					<img src="behance logo.png" class="behance-logo behance-logo-left">
+					<div class="behance-text-container">
+						<div class="behance-text">View on</div>
+						<div class="behance-text-pink">Behance</div>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
+	
+	<div class="content">
+		<div class="content-title">Pangea.app</div>
+		
+		<div class="txt">
+			<p>For the Summer of 2018 I was a branding and marketing intern for Pangea.app, a startup from Brown University. Through the course of my internship I helped relaunch the brand with an entirely new brand image, assisted in redesigning the app from the ground up, and put together an online prescence.</p>
+			<p>The app connects college "hustlers" to jobs and gigs both within their college and the community around it. Since relaunching in September, the app has garnered hundreds of users and scores of transactions.</p>
+			<p>After the internship ended I transitioned into a marketing-focused role, helping to create engaging social ads and postering campaigns. I also assisted in events, including the Bazaar which featured sellers from the app in a farmer's market-esque setting.</p>
+			<p>My role: Art direction, copywriting</p>
+			<p>Marketing team members: Francis Park, Rachel Gross, Amber Teng, & Adam Alpert</p>
+		</div>
+		
+		<div class="img" style="top: 22.5%;">
+			<img class="content-image" src="images/pangea_logo.png">
+			<img class="content-image" src="images/pangea_ui.png">
+			<a href="https://www.behance.net/gallery/65409211/Move-Out-Donate">
+				<div class="behance-link behance-link-left">
+					<img src="behance logo.png" class="behance-logo behance-logo-left">
+					<div class="behance-text-container">
+						<div class="behance-text">View on</div>
+						<div class="behance-text-pink">Behance</div>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
+	
+	<div class="content">
+		<div class="content-title">Ocean Spray</div>
+		
+		<div class="txt">
+			<p>The National Student Advertising Competition's 2018 client was Ocean Spray, who hoped to increase household penetration in 25-34 year old millenials. As a member of Johnson & Wales University's Ad Team, I worked as an art director and part-time copywriter to create a fully-integrated national campaign.</p>
+			<p>Focusing in on the idea that we all make a concisous choice throughout our day to keep doing the same old thing, we introduced the tagline "Add Different to your Day". By creating our own dayparts, we were able to serve ads to our target on the media that they were most likely to be using, rationing a sparse budget while spreading our footprint onto many different outlets.</p>
+			<p>Our campaign placed first in District One (New England), and just narrowly missed attending the Finals by coming in 9th in the Semifinal round.</p>
+			<p>My role: Art direction, copywriting</p>
+			<p>Creative team members: Andrew Morner, Arianna, Psy, Manal, Lindsay Saiia, Sydney Gray, & Lorianna Loagn.</p>
+		</div>
+		
+		<div class="img" style="top: 22.5%;">
+			<img class="content-image" src="images/OS_bus.png">
+			<img class="content-image" src="images/OS_media.png">
+			<a href="https://www.behance.net/gallery/65409211/Move-Out-Donate">
+				<div class="behance-link behance-link-left">
+					<img src="behance logo.png" class="behance-logo behance-logo-left">
+					<div class="behance-text-container">
+						<div class="behance-text">View on</div>
+						<div class="behance-text-pink">Behance</div>
+					</div>
+				</div>
+			</a>
+		</div>
+	</div>
+	
+	<div class="content">
 		<div class="content-title">Move Out + Donate</div>
 		
 		<div class="txt">
