--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,8 @@
 	<title>Projects</title>
 	<!--		<link href="portfolio.css" rel="stylesheet" type="text/css">-->
 	<!--		<link href="portfolio-mobile.css" rel="stylesheet" type="text/css">-->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!--	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
+	<script src="jquery.js"></script>
 	<script>
 		if ($(window).width() > $(window).height()) { //desktop
 			document.write('<link href="portfolio.css" rel="stylesheet" type="text/css">');
@@ -58,21 +59,31 @@
 		})
 	</script>
 	<script src="lightbox-min.css"></script>
+	<script type="text/javascript" src="jquery.lazy.min.js"></script>
 	<script>
 		$(document).ready(function () {
-		  "use strict";
-		  $(".lightbox").click(function () {
-			  var imgsrc = $(this).attr('src');
-			  $("body").append("<div class='img-popup'><span class='close-lightbox'>&times;</span><img src='" + imgsrc + "'></div>");
-			  $(".close-lightbox, .img-popup").click(function () {
-				  $(".img-popup").fadeOut(500, function () {
-					  $(this).remove();
-				  }).addClass("lightboxfadeout");
-			  });
-		  });
-		  $(".lightbox").click(function () {
-			  $(".img-popup").fadeIn(500);
-		  });
+			"use strict";
+			$(".lightbox").click(function () {
+				var imgsrc = $(this).attr('src');
+				$("body").append("<div class='img-popup'><span class='close-lightbox'>&times;</span><img src='" + imgsrc + "'></div>");
+				$(".close-lightbox, .img-popup").click(function () {
+					$(".img-popup").fadeOut(500, function () {
+						$(this).remove();
+					}).addClass("lightboxfadeout");
+				});
+			});
+			$(".lightbox").click(function () {
+				$(".img-popup").fadeIn(500);
+			});
+			
+			$(function() {
+				$('.content-image').Lazy({
+					effect: 'fadeIn',
+					effectTime: "250",
+					visibleOnly: true
+				});
+				console.log("hit");
+			});
 		});
 	</script>
 	
@@ -120,8 +131,8 @@
 		</div>
 		
 		<div class="img" style="top: 22.5%;">
-			<img class="content-image lightbox lightbox" src="images/UNICEF_2.png">
-			<img class="content-image lightbox" src="images/UNICEF_4.png">
+			<img class="content-image lightbox" data-src="images/UNICEF_2.png">
+			<img class="content-image lightbox" data-src="images/UNICEF_4.png">
 		</div>
 	</div>
 	
@@ -137,8 +148,8 @@
 		</div>
 		
 		<div class="img" style="top: 22.5%;">
-			<img class="content-image lightbox" src="images/pangea_logo.png">
-			<img class="content-image lightbox" src="images/pangea_ui.png">
+			<img class="content-image lightbox" data-src="images/pangea_logo.png">
+			<img class="content-image lightbox" data-src="images/pangea_ui.png">
 		</div>
 	</div>
 	
@@ -154,8 +165,9 @@
 		</div>
 		
 		<div class="img" style="top: 22.5%;">
-			<img class="content-image lightbox" src="images/OS_bus.png">
-			<img class="content-image lightbox" src="images/OS_media.png">
+			<img class="content-image lightbox" data-src="images/OS_bus.png">
+			<img class="content-image lightbox" data-src="images/OS_can.png">
+			<img class="content-image lightbox" data-src="images/OS_traffic.png">
 		</div>
 	</div>
 	
@@ -170,9 +182,9 @@
 		</div>
 		
 		<div class="img" style="top: 22.5%;">
-			<img class="content-image lightbox" src="images/moveout.png">
+			<img class="content-image lightbox" data-src="images/moveout.png">
 
-			<a href="https://www.behance.net/gallery/65409211/Move-Out-Donate">
+			<a /href="https://www.behance.net/gallery/65409211/Move-Out-Donate">
 				<div class="behance-link behance-link-left">
 					<img src="behance logo.png" class="behance-logo behance-logo-left">
 					<div class="behance-text-container">
@@ -197,8 +209,14 @@
 		</div>
 		
 		<div class="img" style="top: 20%;">
-			<img class="content-image lightbox" src="images/cas.png">
-
+			<img class="content-image lightbox" data-src="images/cas.png">
+			<div class="cas_website_button">
+				<div class="cas_website_button_text">Microsite</div>
+			</div>
+			<div class="cas_website_container">
+				<iframe class="cas_website" src="cas-website/index.html"></iframe>
+				<div class="cas_website_backdrop"></div>
+			</div>
 			<a href="https://www.behance.net/gallery/65410155/CAS">
 				<div class="behance-link behance-link-left">
 					<img src="behance logo.png" class="behance-logo behance-logo-left">
@@ -225,7 +243,7 @@
 		</div>
 
 		<div class="img" style="top: 10%;">
-			<img class="content-image lightbox" src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/0a09d158072777.59eec707590bf.png">
+			<img class="content-image lightbox" data-src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/0a09d158072777.59eec707590bf.png">
 
 			<a href="https://www.behance.net/gallery/58072777/Sweet-Emotions">
 				<div class="behance-link behance-link-left">
@@ -274,8 +292,9 @@
 		</div>
 
 		<div class="img">
-			<img class="content-image lightbox" src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/4320f958678147.5a04daad518ae.png">
-			<img class="content-image lightbox" src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/6f2ec458678147.5a04daac71438.png" style="top: 0;">
+			<img class="content-image lightbox" data-src="https://mir-s3-cdn-cf.behance.net/project_modules/max_1200/4320f958678147.5a04daad518ae.png">
+			<img class="content-image lightbox" data-src="https://mir-s3-cdn-cf.behance.net/project_modules/disp/6f2ec458678147.5a04daac71438.png" style="top: 0;">
+			<img class="content-image lightbox" data-src="images/twizzlers_pump.png">
 
 			<a href="https://www.behance.net/gallery/58678147/Twizzlers">
 				<div class="behance-link behance-link-left">
@@ -336,8 +355,21 @@
 					$(".title-mobile").removeClass("title-mobile-contrast");
 				}
 			});
+			
+			$('.cas_website_button').on('click', function() {
+				$('.cas_website').css('display','block');
+				$('.cas_website_backdrop').css('display','block');
+			});
+			
+			$('.cas_website_backdrop').on('click', function() {
+				$('.cas_website').css('display','none');
+				$('.cas_website_backdrop').css('display','none');
+			});
+			
 		});
 	</script>
+	
+
 	
 
 	<!--
