--- a/index.html
+++ b/index.html
@@ -73,11 +73,16 @@
 			<a href="#bio"><img src="down-arrow.png" alt="down arrow" class="downarrow"></a>
 		</div>
 	</div>
-	<div class="fullscreen" id="bio">
-		<div class="bio-header">Hi, I'm Andrew</div>
+	<div class="fullscreen" id="bio" style="height: 150%">
+		<div class="bio-header">There are 2,112 people named Andrew Thompson in the US.</div>
 		<div class="bio-body">
-			<p>I'm a student at Johnson & Wales University in Providence, Rhode Island studying Advertising and Marketing Communications. I focus on branding and creative advertising, utilizing graphic design, animation, and web design to create fully integrated campaigns that actually mean something.</p>
-			<p>I currently work at Pangea.app, a Providence-based startup building a marketplace for college students to freelance both within their institutions and with the general public. I am also the co-events chair for JWU's AD Club, and head designer on the award-winning AD Team.</p>
+			<div class="paragraph" style="grid-row: 1st;">And I want to tell you that I’m more than a statistic. But instead of telling you, I’m going to show you. Since a picture is worth a thousand words, here’s two to show who I am:</div>
+			<div style="grid-row: image;"><div class="bio-pictures-container" >
+				<img class="bio-picture-left bio-picture" src="images/andrew-left.png">
+				<img class="bio-picture-right bio-picture" src="images/andrew-right.gif">
+				</div></div>
+			<div class="paragraph" style="grid-row: 3rd;">Yes, both of those are of me behind a camera, because that’s where I spend most of my time. I’m happiest when I’m making new things, and I find that the best creative thoughts come from hard work. </div>
+			<div class="paragraph" style="grid-row: 4th;">And speaking of hard work, here’s some of mine.</div>
 		</div>
 		<div class="sidebar">
 			<a href="#portfolio" class="sidebar-hitbox">
