--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<script src="js/papaparse.min.js"></script>
 	<script src="js/barba.min.js" type="text/javascript"></script>
 	<script src="js/jquery.center.min.js"></script>
+	<script src="js/tilt.jquery.min.js"></script>
 
 
-	
 	<link rel="stylesheet" href="https://use.typekit.net/uxg6tuv.css">
 	<link rel="stylesheet" href="main.css">
 	
@@ -103,7 +103,7 @@
 				duration: 1000,
 				easing: 'easeOutExpo',
 				loop: false,
-				begin: () => {console.log("Portfolio page " + index + " loaded.")},
+				begin: () => {console.log("Portfolio page " + index + " loaded.");},
 				complete: () => {$(caption[index][3]).hide();}
 			});
 		}
@@ -182,6 +182,11 @@
 		$(".logo").center({against: '#main'});
 		$(".bio").center({against: '#left'});
 		$(".bio").css('left', 0);
+		
+		const tilt = $('.portfolioTile').tilt({
+			maxTilt: 5,
+			perspective: 250
+		});
 
 		for(var i = 0; i < caption.length; i++) {		// preload portfolio pages
 			loadPortfolioContent(i);
@@ -247,7 +252,7 @@
 							easing: 'easeOutExpo',
 							delay: 1500,
 							loop: false,
-							complete: function() {
+							complete: function() {								
 								anime({
 									targets: ['.siema', '.siemaName', '.siemaCaption', '.backButton', '.forwardButton'],
 									opacity: [0, 1],
@@ -306,6 +311,11 @@
 							delay: 1500,
 							loop: false,
 							complete: function() {
+								
+								$('body').css('height', 'auto').css('overflow', 'visible');
+								$('#work').css('display', 'inline-grid');
+
+								
 								anime({
 									targets: ['.siema', '.siemaName', '.siemaCaption', '.backButton', '.forwardButton'],
 									opacity: [0, 1],
@@ -436,6 +446,7 @@
 			</div>
 		</div>
 	</div>
+	<div id="container">
 	<div id="main"> 
 		<div class="logo"></div>
 		<div id="left">
@@ -476,6 +487,39 @@ c-0.306,0.307-0.802,0.307-1.106,0c-0.307-0.305-0.307-0.801,0-1.105l4.184-4.185H1
 S1.293,9.212,1.729,9.212z"></path>
 </svg></div>
 		</div>
+	</div>
+	<div id="work">
+		<div data-tilt class="portfolioTile" style="grid-row: 1 / 2; background-image: url(img/unicef.jpg);" onclick="$('#container').load('unicef.html');">
+			<div class="portfolioTileName">UNICEF Kid Power Band</div>
+			<div class="portfolioTileCaption">Advertising Campaign</div>
+		</div>
+		
+		<div class="portfolioTile" style="grid-row: 2 / 3; background-image: url(img/os_cover.png)">
+			<div class="portfolioTileName">Ocean Spray</div>
+			<div class="portfolioTileCaption">Advertising Campaign</div>
+		</div>
+		
+		<div class="portfolioTile" style="grid-row: 3 / 4; background-image: url(img/pangea.png)">
+			<div class="portfolioTileName">Pangea.app</div>
+			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
+			
+		</div>
+		
+		<div class="portfolioTile" style="grid-row: 4 / 5; background-image: url(img/bhddh_cover.png)">
+			<div class="portfolioTileName">BHDDH</div>
+			<div class="portfolioTileCaption">Branding</div>
+		</div>
+		
+		<div class="portfolioTile" style="grid-row: 5 / 6; background-image: url(img/cas_cover.png)">
+			<div class="portfolioTileName">CAS</div>
+			<div class="portfolioTileCaption">UI/UX, Advertising, Branding</div>
+		</div>
+		
+		<div class="portfolioTile" style="grid-row: 6 / 7; background-image: url(img/moveout_cover.png)">
+			<div class="portfolioTileName">Move Out + Donate</div>
+			<div class="portfolioTileCaption">Advertising Campaign</div>
+		</div>
+	</div>
 	</div>
 </body>
 </html>
